# plugin-template

./: LICENSE  README.md  cookiecutter.json
.github/workflows/: test-template.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  aoe-plugin.toml  cliff.toml
{{cookiecutter.project_slug}}/.github/workflows/: checks.yml  pr-title-check.yml  release.yml
{{cookiecutter.project_slug}}/_runtimes/node/: eslint.config.js  gitignore.fragment  package.json
{{cookiecutter.project_slug}}/_runtimes/node/scripts/: write-aoe-wrapper.mjs
{{cookiecutter.project_slug}}/_runtimes/node/src/: index.ts  rpc.ts
{{cookiecutter.project_slug}}/_runtimes/node/test/: worker.test.ts
{{cookiecutter.project_slug}}/_runtimes/python/: gitignore.fragment  pyproject.toml
{{cookiecutter.project_slug}}/_runtimes/python/src/{{ cookiecutter.project_slug|replace('-', '_') }}/: __init__.py  rpc.py  worker.py
{{cookiecutter.project_slug}}/_runtimes/python/tests/: test_rpc.py  test_worker_contract.py
{{cookiecutter.project_slug}}/_runtimes/rust/: Cargo.toml
{{cookiecutter.project_slug}}/_runtimes/rust/src/: main.rs  rpc.rs
{{cookiecutter.project_slug}}/_runtimes/rust/tests/: worker_contract.rs
