[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.description }}"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
{{ cookiecutter.project_slug }}-worker = "{{ cookiecutter.project_slug|replace('-', '_') }}.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/{{ cookiecutter.project_slug|replace('-', '_') }}/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug|replace('-', '_') }}"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.11.4",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
explicit_package_bases = true

[tool.ruff]
exclude = [".aoe-build", ".venv", "venv", "build", "dist"]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # not every function needs a docstring
    "ANN401",   # Any is intentional at the JSON-RPC boundary
    "EM101",    # actionable hints are string literals by design
    "EM102",
    "TRY003",
    "COM812",   # conflicts with the formatter
    "ISC001",
    "CPY001",   # no per-file copyright header
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "INP001", "D", "S603", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-markers"]
